kubernetes/apps/temporal/temporal/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: temporal-web
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - temporal.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: temporal-web
          port: 8080
